# Bomberman

./: .clang-format  .gitignore  CMakeLists.txt  libopenal.so.1.21.1
.github/workflows/: build-develop.yml  format.yml  release.yml
CMake/: CpackConfig.cmake  bomberman.rc
assets/: Bombereman_Block_Clean.glb  Bombereman_Block_Cracked.glb  Bombereman_Block_Mud.glb  Bomberman_Play.glb  Bomberman_Player.gltf
assets/Menu/Bomb/: Notif_bar.png~
assets/Menu/Bomb/Menus/Main/: .Menu_main_layout.png-autosave.kra
assets/Menu/Bomb/Menus/Settings/audio/: Menu_settings_layout_audio.png~  Menu_settings_layout_audio_bar_fill.png~  audio_icon.png~  fx_icon.png~  music_icon.png~
assets/Menu/Bomb/Menus/Settings/controls/: Menu_settings_layout_case.png~
assets/Menu/Bomb/Menus/help/: Menu_help_layout.png~
assets/Models/: BACKGROUND.glb  BLOCK_MUD.glb  BLOCK_STONE.glb  GROUND.glb  GROUND_CORNER.glb  MYSTERY_BOX.glb  STAIR.glb  WALL.glb  WALL_CORNER.glb  bomb.glb  bomb_yellow.glb  player_fixed.glb  player_lime.glb  player_red.glb  player_yellow.glb
assets/Text/: A.png~  B.png~  C.png~  D.png~  E.png~  F.png~  G.png~  H.png~  I.png~  Q.png~  _question_mark.png~  m.png~
assets/config/: audio_settings.json  bindings.json
assets/maps/: MapTest.csv  example.csv  newMap.csv
assets/textures/Numbers/flat grey/: ..png-autosave.kra
assets/textures/Numbers/gradiant grey/: ..png-autosave.kra  9.png~
assets/textures/Numbers/gradiant yellow/: ..png-autosave.kra
doc/: class_indie.pu
game/: CMakeLists.txt
game/include/: AIController.hpp  AStar.hpp  BackgroundMove.hpp  Bomb.hpp  MapGenerator.hpp  MenuLayoutManager.hpp  MenuState.hpp  Player.hpp  PlayerController.hpp  Room.hpp  RoomState.hpp  RootState.hpp  SoloController.hpp  Tag.hpp  TrackballCamera.hpp  lib.hpp  scripts.hpp
game/include/bomberman_lobby/: BombermanLobby.hpp  BombermanLobbySettings.hpp  BombermanPacket.hpp
game/include/bomberman_lobby/packets/: GameStartPacket.hpp  LobbySettingsPacket.hpp  PlayerInputsPacket.hpp  PlayerJoinPacket.hpp  PlayerLeavePacket.hpp  RoomClosePacket.hpp  RoomJoinPacket.hpp  RoomSettingsUpdate.hpp
game/include/concurrent/: ConcurrentQueue.hpp  ConcurrentVector.hpp  SynchroRinger.hpp
game/include/discord/: achievement_manager.h  activity_manager.h  application_manager.h  core.h  discord.h  discord_game_sdk.h  ffi.h  image_manager.h  lobby_manager.h  network_manager.h  overlay_manager.h  storage_manager.h  types.h  voice_manager.h
game/include/matchmaking/: Matchmaking.hpp
game/include/menu/: LayoutSubAudio.hpp  LayoutSubControls.hpp  LayoutSubDisplay.hpp  MenuLayoutManager.hpp
game/include/network/: Http.hpp
game/include/plugin/: BombermanLobbyPlugin.hpp  DiscordPlugin.hpp  NetworkPlugin.hpp  RoomPlugin.hpp
game/include/plugin/bomberman_packets/: BombermanPlayerPacket.hpp
game/include/plugin/network/: Client.hpp  NetClient.hpp  NetworkId.hpp  NetworkManager.hpp  NetworkUtils.hpp  Packet.hpp  Server.hpp  SynchroThreadBuffer.hpp  Utils.hpp
game/include/plugin/room/: Room.hpp  RoomClient.hpp  RoomPacket.hpp  RoomPlayer.hpp  RoomPlayerId.hpp  RoomServer.hpp
game/include/scripts/: AIController.hpp  Bomb.hpp  CharacterController.hpp  MapGenerator.hpp  MysteryBox.hpp  NetworkController.hpp  PlayerController.hpp  SoloController.hpp  TrackballCamera.hpp
game/include/states/: GameState.hpp  LoadingState.hpp  MenuState.hpp  PreSoloGameState.hpp  ResultState.hpp  RoomLocalState.hpp  RoomState.hpp  RootState.hpp  StartState.hpp
game/include/utils/: AStar.hpp  CsvUtils.hpp  GameSettings.hpp  Map.hpp  Player.hpp  Score.hpp  Tag.hpp
game/include/utils/map/: MapGeneration.hpp  MapLoading.hpp
game/src/: AIController.cpp  AStar.cpp  BackgroundMove.cpp  Bomb.cpp  MapGenerator.cpp  MenuLayoutManager.cpp  MenuState.cpp  MysteryBox.cpp  Player.cpp  PlayerController.cpp  RoomState.cpp  RootState.cpp  SoloController.cpp  main.cpp
game/src/bomberman_lobby/: BombermanLobby.cpp
game/src/bomberman_lobby/packets/: GameStartPacket.cpp  LobbySettingsPacket.cpp  PlayerInputsPacket.cpp  PlayerJoinPacket.cpp  PlayerLeavePacket.cpp  RoomClosePacket.cpp  RoomJoinPacket.cpp
game/src/concurrent/: SynchroRinger.cpp
game/src/discord/: achievement_manager.cpp  activity_manager.cpp  application_manager.cpp  core.cpp  image_manager.cpp  lobby_manager.cpp  network_manager.cpp  overlay_manager.cpp  relationship_manager.cpp  storage_manager.cpp  store_manager.cpp  types.cpp  user_manager.cpp  voice_manager.cpp
game/src/matchmaking/: Matchmaking.cpp
game/src/menu/: BackgroundMove.cpp  LayoutSubAudio.cpp  LayoutSubControls.cpp  LayoutSubDisplay.cpp  MenuLayoutManager.cpp
game/src/plugin/: BombermanLobbyPlugin.cpp  DiscordPlugin.cpp  NetworkPlugin.cpp  RoomPlugin.cpp
game/src/plugin/network/: Client.cpp  NetClient.cpp  NetworkId.cpp  NetworkManager.cpp  Packet.cpp  Server.cpp
game/src/plugin/room/: Room.cpp  RoomClient.cpp  RoomPacket.cpp  RoomPlayer.cpp  RoomServer.cpp
game/src/scripts/: AIController.cpp  Bomb.cpp  CharacterController.cpp  MapGenerator.cpp  MysteryBox.cpp  NetworkController.cpp  PlayerController.cpp  SoloController.cpp  TrackballCamera.cpp
game/src/states/: GameState.cpp  MenuState.cpp  PreSoloGameState.cpp  ResultState.cpp  RoomLocalState.cpp  RoomState.cpp  RootState.cpp  StartState.cpp
game/src/utils/: AStar.cpp  CsvUtils.cpp  Map.cpp
game/src/utils/map/: MapGeneration.cpp  MapLoading.cpp
